--- a/templates/back/photography/edit.html.twig
+++ b/templates/back/photography/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Photography</h1>
 
-    {{ include('photography/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back/photography/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('photography_index') }}">back to list</a>
 
-    {{ include('photography/_delete_form.html.twig') }}
+    {{ include('back/photography/_delete_form.html.twig') }}
 {% endblock %}
