--- a/templates/back/photography/new.html.twig
+++ b/templates/back/photography/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new Photography</h1>
 
-    {{ include('photography/_form.html.twig') }}
+    {{ include('back/photography/_form.html.twig') }}
 
     <a href="{{ path('photography_index') }}">back to list</a>
 {% endblock %}
