--- a/templates/back/portfolio/edit.html.twig
+++ b/templates/back/portfolio/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Portfolio</h1>
 
-    {{ include('portfolio/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back/portfolio/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('portfolio_index') }}">back to list</a>
 
-    {{ include('portfolio/_delete_form.html.twig') }}
+    {{ include('back/portfolio/_delete_form.html.twig') }}
 {% endblock %}
