--- a/templates/back/portfolio/index.html.twig
+++ b/templates/back/portfolio/index.html.twig
@@ -1,10 +1,11 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}Portfolio index{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
-    <h1>Portfolio index</h1>
+    <h1>Les collections</h1>
 
+    
     <table class="table">
         <thead>
             <tr>
