--- a/templates/back/portfolio/show.html.twig
+++ b/templates/back/portfolio/show.html.twig
@@ -42,5 +42,5 @@
 
     <a href="{{ path('portfolio_edit', {'id': portfolio.id}) }}">edit</a>
 
-    {{ include('portfolio/_delete_form.html.twig') }}
+    {{ include('back/portfolio/_delete_form.html.twig') }}
 {% endblock %}
