--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -7,6 +7,8 @@
         {# Bootstrap 4.6 CSS #}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
@@ -18,23 +20,24 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Page d'accueil</a>
+                <a class="navbar-brand" href="{{ path('portfolio_index')}}">Page d'accueil</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="{{ path('portfolio_index')}}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Collections
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Collection 1</a></li>
-                            <li><a class="dropdown-item" href="#">Collection 2</a></li>
+                            {# {% for portfolio in portfolios %}
+                                <li><a class="dropdown-item" href="{{ path('portfolio_show', {'id': portfolio.id})}}">{{ portfolio.name }}</a></li>
+                            {% endfor %} #}
                         </ul>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Photographies</a>
+                    <a class="nav-link" href="{{ path('photography_index') }}">Photographies</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="#">Biographie</a>
@@ -43,7 +46,10 @@
                 </div>
             </div>
         </nav>
-        {% block body %}{% endblock %}
+
+        <div class="container-fluid container-lg">
+            {% block body %}{% endblock %}
+        </div>
 
         {# Bootstrap 4.6 JS #}
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
