UPDATE: modifications of method naming

--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -48,6 +48,18 @@
         </nav>
 
         <div class="container-fluid container-lg">
+
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ label }} my-3 alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            
             {% block body %}{% endblock %}
         </div>
 
