--- a/templates/back/portfolio/index.html.twig
+++ b/templates/back/portfolio/index.html.twig
@@ -5,49 +5,21 @@
 {% block body %}
     <h1>Les collections</h1>
 
-    {% for portfolio in portfolios %}
-        <div>
-            <a href="{{ path('portfolio_show', {'id': portfolio.id})}}">{# <img src="{{ asset(portfolio.picture) }}"> #} {{ portfolio.name }}</a>
-            <a href="{{ path('portfolio_show', {'id': portfolio.id}) }}">show</a>
-            <a href="{{ path('portfolio_edit', {'id': portfolio.id}) }}">edit</a>
-        </div>
-    {% endfor %}
-    
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Picture</th>
-                <th>Thumbnail</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <div class="portfolio-cards">
         {% for portfolio in portfolios %}
-            <tr>
-                <td>{{ portfolio.id }}</td>
-                <td>{{ portfolio.name }}</td>
-                <td>{{ portfolio.description }}</td>
-                <td>{{ portfolio.picture }}</td>
-                <td>{{ portfolio.thumbnail }}</td>
-                <td>{{ portfolio.createdAt ? portfolio.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ portfolio.updatedAt ? portfolio.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('portfolio_show', {'id': portfolio.id}) }}">show</a>
-                    <a href="{{ path('portfolio_edit', {'id': portfolio.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
+            <div class="card" style="width: 18rem;">
+                <a href="{{ path('portfolio_show', {'id': portfolio.id}) }}" ><img class="card-img-top" src="{{ asset(portfolio.picture) }}" alt="Card image cap"></a>
+                <div class="card-body portfolio-body">
+                    <h5 class="card-title">{{ portfolio.name }}</h5>
+                    <p class="card-text">{{ portfolio.description }}</p>
+                    <a href="#" class="btn btn-primary">Ouvrir</a>
+                    <a href="{{ path('portfolio_show', {'id': portfolio.id}) }}">Détail</a>
+                    <a href="{{ path('portfolio_edit', {'id': portfolio.id}) }}">Modifier</a>
+                </div>
+            </div>
         {% endfor %}
-        </tbody>
-    </table>
+    </div>
+    
 
-    <a href="{{ path('portfolio_new') }}">Create new</a>
+    <a href="{{ path('portfolio_new') }}">Créer une nouvelle collection</a>
 {% endblock %}
