--- a/templates/back/portfolio/show.html.twig
+++ b/templates/back/portfolio/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Portfolio{% endblock %}
 
 {% block body %}
-    <h1>Portfolio</h1>
+    <h1>{{ portfolio.name }}</h1>
 
     <table class="table">
         <tbody>
