--- a/templates/back/photography/new.html.twig
+++ b/templates/back/photography/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('back/photography/_form.html.twig') }}
 
-    <a href="{{ path('photography_index') }}">back to list</a>
+    <a href="{{ path('photography_browse') }}">back to list</a>
 {% endblock %}
