--- a/templates/back/portfolio/edit.html.twig
+++ b/templates/back/portfolio/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('back/portfolio/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('portfolio_index') }}">back to list</a>
+    <a href="{{ path('portfolio_browse') }}">back to list</a>
 
     {{ include('back/portfolio/_delete_form.html.twig') }}
 {% endblock %}
