--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -20,27 +20,28 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{{ path('portfolio_index')}}">Page d'accueil</a>
+                <a class="navbar-brand" href="{{ path('portfolio_browse')}}">Page d'accueil</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="{{ path('portfolio_index')}}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <div class="dropdown">
+                        <a class="btn btn-secondary dropdown-toggle" href="{{ path('portfolio_browse')}}" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Collections
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                             {# {% for portfolio in portfolios %}
-                                <li><a class="dropdown-item" href="{{ path('portfolio_show', {'id': portfolio.id})}}">{{ portfolio.name }}</a></li>
+                                <li><a class="dropdown-item" href="{{ path('portfolio_read', {'id': portfolio.id})}}">{{ portfolio.name }}</a></li>
                             {% endfor %} #}
-                        </ul>
+                        </div>
+                    </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('photography_browse') }}">Photographies</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="{{ path('photography_index') }}">Photographies</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="#">Biographie</a>
+                        <a class="nav-link" href="#">Biographie</a>
                     </li>
                 </ul>
                 </div>
