--- a/templates/back/photography/edit.html.twig
+++ b/templates/back/photography/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('back/photography/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('photography_index') }}">back to list</a>
+    <a href="{{ path('photography_browse') }}">back to list</a>
 
     {{ include('back/photography/_delete_form.html.twig') }}
 {% endblock %}
