--- a/templates/back/photography/show.html.twig
+++ b/templates/back/photography/show.html.twig
@@ -42,7 +42,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('photography_index') }}">back to list</a>
+    <a href="{{ path('photography_browse') }}">back to list</a>
 
     <a href="{{ path('photography_edit', {'id': photography.id}) }}">edit</a>
 
