--- a/templates/back/portfolio/add.html.twig
+++ b/templates/back/portfolio/add.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('back/portfolio/_form.html.twig') }}
 
-    <a href="{{ path('portfolio_index') }}">back to list</a>
+    <a href="{{ path('portfolio_browse') }}">back to list</a>
 {% endblock %}
