--- a/templates/back/portfolio/read.html.twig
+++ b/templates/back/portfolio/read.html.twig
@@ -38,7 +38,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('portfolio_index') }}">back to list</a>
+    <a href="{{ path('portfolio_browse') }}">back to list</a>
 
     <a href="{{ path('portfolio_edit', {'id': portfolio.id}) }}">edit</a>
 
