--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -29,3 +29,9 @@
   padding-top: 0.7em;
   max-width: 30%;
 }
+
+.change-buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1em;
+}
