--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -7,7 +7,9 @@
         {# Bootstrap 4.6 CSS #}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+
+        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">        
 
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
