--- a/templates/back/photography/_delete_form.html.twig
+++ b/templates/back/photography/_delete_form.html.twig
@@ -1,4 +1,12 @@
-<form method="post" action="{{ path('photography_delete', {'id': photography.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('photography_delete', {'id': photography.id}) }}">
+    <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ photography.id) }}">
-    <button class="btn">Delete</button>
+    
+    <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Supprimer
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <button type="submit" class="dropdown-item">Confirmer</button>
+        <a class="dropdown-item" data-toggle="dropdown">Annuler</a>
+    </div>
 </form>
