--- a/templates/back/photography/browse.html.twig
+++ b/templates/back/photography/browse.html.twig
@@ -3,58 +3,24 @@
 {% block title %}Photography index{% endblock %}
 
 {% block body %}
-    <h1>Photography index</h1>
+    <h1>Toutes les photographies</h1>
 
-    {% for photography in photographies %}
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="{{ asset(photography.picture) }}" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">{{ photography.title }}</h5>
-                <p class="card-text">{{ photography.description }}</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-                <a href="{{ path('photography_read', {'id': photography.id}) }}">show</a>
-                <a href="{{ path('photography_edit', {'id': photography.id}) }}">edit</a>
-            </div>
-        </div>
-    {% endfor %}
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Description</th>
-                <th>TextualAlternative</th>
-                <th>Picture</th>
-                <th>Thumbnail</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
+    <div class="photography-card row">
         {% for photography in photographies %}
-            <tr>
-                <td>{{ photography.id }}</td>
-                <td>{{ photography.title }}</td>
-                <td>{{ photography.description }}</td>
-                <td>{{ photography.textualAlternative }}</td>
-                <td>{{ photography.picture }}</td>
-                <td>{{ photography.thumbnail }}</td>
-                <td>{{ photography.createdAt ? photography.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ photography.updatedAt ? photography.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('photography_read', {'id': photography.id}) }}">show</a>
-                    <a href="{{ path('photography_edit', {'id': photography.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
+            <div class="card cards col-4">
+                <img class="card-img-top" src="{{ asset(photography.picture) }}" alt="Card image cap">
+                <div class="card-body cards-body">
+                    <h5 class="card-title">{{ photography.title }}</h5>
+                    <p class="card-text">{{ photography.description }}</p>
+                    <a href="{{ path('photography_read', {'id': photography.id}) }}" class="btn btn-primary">Ouvrir</a>
+                    <div class="change-buttons">
+                        <a href="{{ path('photography_edit', {'id': photography.id}) }}" class="btn btn-warning">Modifier</a>
+                        {{ include('back/photography/_delete_form.html.twig') }}
+                    </div>
+                </div>
+            </div>
         {% endfor %}
-        </tbody>
-    </table>
+    </div>
 
     <a href="{{ path('photography_add') }}">Create new</a>
 {% endblock %}
