--- a/templates/back/portfolio/read-pictures.html.twig
+++ b/templates/back/portfolio/read-pictures.html.twig
@@ -22,9 +22,11 @@
                 <div class="card-body cards-body">
                     <h5 class="card-title">{{ photography.title }}</h5>
                     <p class="card-text">{{ photography.description }}</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                    <a href="{{ path('photography_read', {'id': photography.id}) }}">show</a>
-                    <a href="{{ path('photography_edit', {'id': photography.id}) }}">edit</a>
+                    <a href="{{ path('photography_read', {'id': photography.id}) }}" class="btn btn-primary">Ouvrir</a>
+                    <div class="change-buttons">
+                        <a href="{{ path('photography_edit', {'id': photography.id}) }}" class="btn btn-warning">Modifier</a>
+                        {{ include('back/portfolio/_delete_form.html.twig') }}
+                    </div>
                 </div>
             </div>
         {% endfor %}
@@ -32,5 +34,5 @@
 
     <a class="btn btn-primary" href="{{ path('photography_add') }}">Ajouter une photographie</a>
 
-    {{ include('back/portfolio/_delete_form.html.twig') }}
+    
 {% endblock %}
