WIP: collection access from navbar and add photo

--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -33,11 +33,16 @@
                             Collections
                         </a>
 
+                        {# ================= C'EST DE LA ===============#}
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            {# {% for portfolio in portfolios %}
-                                <li><a class="dropdown-item" href="{{ path('portfolio_read', {'id': portfolio.id})}}">{{ portfolio.name }}</a></li>
-                            {% endfor %} #}
+                                                
+                            {% for portfolio in portfolios %}
+                                <li><a class="dropdown-item" href="{{ path('portfolio_read_pictures', {'id': portfolio.id})}}">{{ portfolio.name }}</a></li>
+                            {% endfor %}
                         </div>
+                        {# ================= A DE LA ===============#}
+
+
                     </div>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('photography_browse') }}">Photographies</a>
