--- a/templates/back/photography/browse.html.twig
+++ b/templates/back/photography/browse.html.twig
@@ -22,5 +22,5 @@
         {% endfor %}
     </div>
 
-    <a href="{{ path('photography_add') }}">Create new</a>
+    <a class="btn btn-primary" href="{{ path('photography_add') }}">Ajouter une photographie</a>
 {% endblock %}
