--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -48,7 +48,7 @@
                         <a class="nav-link" href="{{ path('photography_browse') }}">Photographies</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('biography_index') }}">Biographie</a>
+                        <a class="nav-link" href="{{ path('biography_browse') }}">Biographie</a>
                     </li>
                 </ul>
                 </div>
