--- a/templates/back/photography/edit.html.twig
+++ b/templates/back/photography/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Photography{% endblock %}
 
 {% block body %}
-    <h1>Edit Photography</h1>
+    <h1>Modifier la photographie</h1>
 
-    {{ include('back/photography/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('photography_browse') }}">back to list</a>
+    {{ include('back/photography/_form.html.twig', {'button_label': 'Valider'}) }}
 
     {{ include('back/photography/_delete_form.html.twig') }}
+
+    <a href="{{ path('portfolio_read_pictures', {'id': photography.portfolio.id}) }}">Retour à la collection sans modifier</a>
 {% endblock %}
