--- a/templates/back/photography/read.html.twig
+++ b/templates/back/photography/read.html.twig
@@ -42,9 +42,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('photography_browse') }}">back to list</a>
-
-    <a href="{{ path('photography_edit', {'id': photography.id}) }}">edit</a>
+    <a class="btn btn-warning" href="{{ path('photography_edit', {'id': photography.id}) }}">Modifier</a>
 
     {{ include('back/photography/_delete_form.html.twig') }}
+
+    <a href="{{ path('portfolio_read_pictures', {'id': photography.portfolio.id}) }}">Retour à la collection</a>
 {% endblock %}
