--- a/templates/back/portfolio/edit.html.twig
+++ b/templates/back/portfolio/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Portfolio{% endblock %}
 
 {% block body %}
-    <h1>Edit Portfolio</h1>
+    <h1>Modifier les détails de la collection</h1>
 
-    {{ include('back/portfolio/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('portfolio_browse') }}">back to list</a>
+    {{ include('back/portfolio/_form.html.twig', {'button_label': 'Valider'}) }}
 
     {{ include('back/portfolio/_delete_form.html.twig') }}
+
+    <a href="{{ path('portfolio_read_pictures', {'id': portfolio.id}) }}">Retour à la collection</a>
 {% endblock %}
