Deletion of photographies page, modifications of page names

--- a/templates/back/biography/edit.html.twig
+++ b/templates/back/biography/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}Romain Back Office - Modifier la biographie{% endblock %}
 
 {% block body %}
     <h1>Modifier la biographie</h1>    
