--- a/templates/back/photography/browse.html.twig
+++ b/templates/back/photography/browse.html.twig
@@ -1,6 +1,6 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}Photography index{% endblock %}
+{% block title %}Romain Back Office - Toutes les photographies{% endblock %}
 
 {% block body %}
     <h1>Toutes les photographies</h1>
