--- a/templates/back/photography/edit.html.twig
+++ b/templates/back/photography/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}Edit Photography{% endblock %}
+{% block title %}Romain Back Office - Modifier la Photographie{% endblock %}
 
 {% block body %}
     <h1>Modifier la photographie</h1>
