--- a/templates/back/photography/read.html.twig
+++ b/templates/back/photography/read.html.twig
@@ -1,9 +1,9 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}Photography{% endblock %}
+{% block title %}Romain Back Office - Détails de photographie{% endblock %}
 
 {% block body %}
-    <h1>Photography</h1>
+    <h1>Détails - {{ photography.title }}</h1>
 
     <table class="table">
         <tbody>
