--- a/templates/back/portfolio/read.html.twig
+++ b/templates/back/portfolio/read.html.twig
@@ -1,6 +1,6 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}{{ portfolio.name }}{% endblock %}
+{% block title %}Romain Back Office - Détails {{ portfolio.name }}{% endblock %}
 
 {% block body %}
     <h1>{{ portfolio.name }}</h1>
