--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Romain Godard photos - page d'accueil{% endblock %}</title>
+        <title>{% block title %}Romain Godard photos{% endblock %}</title>
         
         {# Bootstrap 4.6 CSS #}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -44,9 +44,6 @@
 
 
                     </div>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('photography_browse') }}">Photographies</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('biography_browse') }}">Biographie</a>
                     </li>
