--- a/templates/back/biography/add.html.twig
+++ b/templates/back/biography/add.html.twig
@@ -1,11 +1,11 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}Romain Back Office - Biographie{% endblock %}
 
 {% block body %}
     <h1>Ajouter une biographie</h1>
 
     {{ include('back/biography/_form.html.twig') }}
 
-    <a href="{{ path('biography_browse') }}">back to list</a>
+    <a href="{{ path('biography_browse') }}">Retour</a>
 {% endblock %}
