--- a/templates/back/biography/browse.html.twig
+++ b/templates/back/biography/browse.html.twig
@@ -1,6 +1,6 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}Romain Back Office - Biographie{% endblock %}
 
 {% block body %}
     
