--- a/templates/back/portfolio/browse.html.twig
+++ b/templates/back/portfolio/browse.html.twig
@@ -1,6 +1,6 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}Romain Back Office - Accueil{% endblock %}
 
 {% block body %}
     <h1>Les collections</h1>
