--- a/templates/back/portfolio/edit.html.twig
+++ b/templates/back/portfolio/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'back/base.html.twig' %}
 
-{% block title %}Edit Portfolio{% endblock %}
+{% block title %}Romain Back Office - Modifier une collection{% endblock %}
 
 {% block body %}
     <h1>Modifier les détails de la collection</h1>
