--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,4 @@
-/* img {
-  width: 800px;
-  max-width: 700px;
-} */
+@import url(//fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;0,400;0,500;0,700;1,200;1,400;1,500;1,700&display=swap);
 
 .picture-small {
   max-width: 70%,
@@ -36,6 +33,22 @@
   margin-top: 1em;
 }
 
-/* .actions-biography {
+body {
+  font-family: 'JetBrains Mono';
+}
 
-} */
+@media (min-width: 576px) {
+  .front {
+    font-size: 1.3em;
+  }
+
+  .front-body {
+    margin: 2em 4em;
+  }
+}
+
+@media (min-width: 992px) {
+  .front {
+    font-size: 1em;
+  }
+}
