--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -8,9 +8,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">        
+        <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">   
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">     
 
         {% block stylesheets %}
             {#{{ encore_entry_link_tags('app') }}#}
@@ -21,14 +22,14 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="{{ path('portfolio_browse')}}">Page d'accueil</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+        <div class="front">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="{{ path('front_home')}}">Page d'accueil</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
                     <div class="dropdown">
                         <a class="btn btn-secondary dropdown-toggle" href="{{ path('portfolio_browse')}}" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Collections
@@ -36,41 +37,34 @@
 
                         {# ================= C'EST DE LA ===============#}
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        
                                                 
                             {% for portfolio in portfolios %}
-                                <li><a class="dropdown-item" href="{{ path('portfolio_read_pictures', {'id': portfolio.id})}}">{{ portfolio.name }}</a></li>
+                                <a class="dropdown-item nav-link" href="{{ path('front_portfolio_read', {'id': portfolio.id})}}">{{ portfolio.name }}</a>
                             {% endfor %}
                         </div>
                         {# ================= A DE LA ===============#}
 
 
                     </div>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('biography_browse') }}">Biographie</a>
-                    </li>
-                </ul>
+                    <a class="nav-link" href="{{ path('front_biography_read') }}">Biographie</a>
+                    <a class="nav-link" href="#">Contact</a>
+                    </div>
+                </div>
+            </nav>        
+            {# {{ dump(portfolios) }}     #}
+    
+            <div class="container-fluid container-lg">
+                
+                <div class="front-body">
+                    {% block body %}{% endblock %}
                 </div>
             </div>
-        </nav>
-
-        <div class="container-fluid container-lg">
-
-            {% for label, messages in app.flashes %}
-                {% for message in messages %}
-                    <div class="alert alert-{{ label }} my-3 alert-dismissible fade show" role="alert">
-                        {{ message }}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                {% endfor %}
-            {% endfor %}
-            
-            {% block body %}{% endblock %}
         </div>
 
         {# Bootstrap 4.6 JS #}
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
     </body>
 </html>
