--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -48,7 +48,7 @@
 
                     </div>
                     <a class="nav-link" href="{{ path('front_biography_read') }}">Biographie</a>
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="{{ path('front_contact') }}">Contact</a>
                     </div>
                 </div>
             </nav>        
