service allcollections fixed

--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -38,10 +38,12 @@
 
                         {# ================= C'EST DE LA ===============#}
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        
+
                                                 
-                            {% for portfolio in portfolios %}
+                            {% for portfolio in portfolios.getCollections %}
+
                                 <a class="dropdown-item nav-link" href="{{ path('front_portfolio_read', {'id': portfolio.id})}}">{{ portfolio.name }}</a>
+                                {# {{ dump(portfolio) }} #}
                             {% endfor %}
                         </div>
                         {# ================= A DE LA ===============#}
@@ -50,6 +52,7 @@
                     </div>
                     <a class="nav-link {% if route_name == "front_biography_read" %} active {% endif %}" href="{{ path('front_biography_read') }}">Biographie</a>
                     <a class="nav-link {% if route_name == "front_contact" %} active {% endif %}" href="{{ path('front_contact') }}">Contact</a>
+                    
                     </div>
                 </div>
             </nav>        
