--- a/templates/front/main/collection.html.twig
+++ b/templates/front/main/collection.html.twig
@@ -9,7 +9,7 @@
 
 {% for photography in photographies %}
 
-<img class="card-img-top" src="{{ asset(photography.picture) }}" alt="Card image cap">
+<img class="card-img-top photo" src="{{ asset(photography.picture) }}" alt="Card image cap">
 
 {% endfor %}
 
