--- a/templates/front/main/index.html.twig
+++ b/templates/front/main/index.html.twig
@@ -15,7 +15,19 @@
 
 {% for portfolio in portfolios %}
 
-  <a href="{{ path('front_portfolio_read', {'id': portfolio.id}) }}" ><img class="card-img-top" src="{{ asset(portfolio.picture) }}" alt="Card image cap"></a>
+  <a href="{{ path('front_portfolio_read', {'id': portfolio.id}) }}" >
+    <div class="portfolio-picture">
+      <img class="card-img-top photo" src="{{ asset(portfolio.picture) }}" alt="Card image cap">
+      <div class="shade">
+        <h2>
+          {{ portfolio.name }}
+        </h2>
+        <h4>
+          {{ portfolio.description }}
+        </h4>
+      </div>
+    </div>
+  </a>
 
 {% endfor %}
 
