--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -43,8 +43,21 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('biography_browse') }}">Biographie</a>
                     </li>
+                    
                 </ul>
                 </div>
+                {% if app.user is not empty %}
+                <div class="my-2 my-lg-0 mr-sm-2 d-flex align-items-center">
+                    <div class="dropdown">
+                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Connecté
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="{{ path('app_logout') }}">Déconnecter</a>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
             </div>
         </nav>
 
