UPDATE: line breaks from form in bio kept

--- a/templates/back/biography/browse.html.twig
+++ b/templates/back/biography/browse.html.twig
@@ -20,7 +20,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">{{ biography.title }}</h5>
-                    <p class="card-text">{{ biography.description }}</p>
+                    <p class="card-text bio-text">{{ biography.description }}</p>
                     <a href="{{ path('biography_edit', {'id': biography.id}) }}" class="btn btn-warning">Modifier</a>
                 </div>
                 <div class="card-footer text-muted">
