--- a/templates/front/main/biography.html.twig
+++ b/templates/front/main/biography.html.twig
@@ -9,7 +9,7 @@
 
 <h1>{{ biography.title }}</h1>
 
-<p>{{ biography.description }}</p>
+<p class="bio-text">{{ biography.description }}</p>
 
 {% endfor %}
 
