--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -50,9 +50,11 @@ body {
   white-space: pre-wrap; 
 }
 
-.copyright {
-  text-align: center;
-  font-size: 0.6em;
+
+
+.portfolio-picture {
+  position: relative;
+  margin-bottom: 5em;
 }
 
 .shade {
@@ -68,9 +70,33 @@ body {
   align-items: center;
   flex-direction: column;
   background: rgba(206, 206, 206, 0.6);
-  /* box-shadow: -2px -13px 22px 11px rgb(128, 128, 128, 0.81), 2px 13px 22px 11px rgb(128, 128, 128, 0.81); */
   color: rgb(25, 25, 25, 0.77);
   box-shadow: 0px 0px 8px 5px rgba(206, 206, 206, 0.6);
+}
+
+.front {
+  position: relative;
+  min-height: 100vh;
+}
+
+main {
+  padding-bottom: 2.5rem;
+}
+
+footer {
+  font-size: 0.8em;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem; 
+  display: inline-flex;
+  align-items: baseline;
+  justify-content: center;
+  
+}
+
+.sitemap {
+  margin-left: 1em;
 }
 
 
@@ -81,6 +107,10 @@ body {
 
   .front-body {
     margin: 2em 4em;
+  }
+
+  .copyright {
+    font-size: 0.4em;
   }
 }
 
@@ -107,12 +137,6 @@ body {
   
   .shade {
     transition: 0.5s;
-    
-    /* border: 1px solid rgb(128, 128, 128, 0.81); */
-    
-    /* background: rgba(128, 128, 128, 0.81); */
-    /* box-shadow: 0px -13px 22px 11px rgb(128, 128, 128, 0.81), 0px 13px 22px 11px rgb(128, 128, 128, 0.81); */
-    /* color: rgb(25, 25, 25, 0.77); */
   }
 
   .shade:hover {
@@ -120,8 +144,8 @@ body {
     background: rgba(128, 128, 128, 0);
     box-shadow: 0px 0px 8px 5px rgba(128, 128, 128, 0);
   }
-  
-  
-  
-  
+   
+  .copyright {    
+    font-size: 0.7em;
+  }
 }
