--- a/templates/back/portfolio/read-pictures.html.twig
+++ b/templates/back/portfolio/read-pictures.html.twig
@@ -17,7 +17,7 @@
 
     <div class="photography-card row">
         {% for photography in photographies %}
-            <div class="card col-4 cards">
+            <div class="card cards">
                 <img class="card-img-top" src="{{ asset(photography.picture) }}" alt="Card image cap">
                 <div class="card-body cards-body">
                     <h5 class="card-title">{{ photography.title }}</h5>
