photo order handled (without drag n drop)

--- a/templates/back/photography/browse.html.twig
+++ b/templates/back/photography/browse.html.twig
@@ -22,5 +22,7 @@
         {% endfor %}
     </div>
 
-    <a class="btn btn-primary" href="{{ path('photography_add') }}">Ajouter une photographie</a>
+    <div class="bottom-button">
+        <a class="btn btn-primary" href="{{ path('photography_add') }}">Ajouter une photographie</a>
+    </div>
 {% endblock %}
