--- a/templates/back/portfolio/browse.html.twig
+++ b/templates/back/portfolio/browse.html.twig
@@ -22,5 +22,7 @@
     </div>
     
 
-    <a class="btn btn-primary" href="{{ path('portfolio_add') }}">Créer une nouvelle collection</a>
+    <div class="bottom-button">
+        <a class="btn btn-primary" href="{{ path('portfolio_add') }}">Créer une nouvelle collection</a>
+    </div>
 {% endblock %}
