--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -100,6 +100,12 @@ footer {
   margin-left: 1em;
 }
 
+.bottom-button {
+  display: flex;
+  justify-content: center;
+  margin: 1.5em auto;
+}
+
 
 @media (min-width: 576px) {
   .front {
