--- a/templates/back/portfolio/read.html.twig
+++ b/templates/back/portfolio/read.html.twig
@@ -12,7 +12,7 @@
                 <td>{{ portfolio.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nom de la collection</th>
                 <td>{{ portfolio.name }}</td>
             </tr>
             <tr>
@@ -20,19 +20,15 @@
                 <td>{{ portfolio.description }}</td>
             </tr>
             <tr>
-                <th>Picture</th>
+                <th>Emplacement</th>
                 <td>{{ portfolio.picture }}</td>
             </tr>
             <tr>
-                <th>Thumbnail</th>
-                <td>{{ portfolio.thumbnail }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
+                <th>Date de Création</th>
                 <td>{{ portfolio.createdAt ? portfolio.createdAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
             <tr>
-                <th>UpdatedAt</th>
+                <th>Date de Modification</th>
                 <td>{{ portfolio.updatedAt ? portfolio.updatedAt|date('Y-m-d H:i:s') : '-' }}</td>
             </tr>
         </tbody>
