--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -66,7 +66,7 @@
 
             <footer>
                 <p class="copyright">
-                    &copy; Copyright 2021. Tous droits réservés, reproduction interdite
+                    &copy; Copyright 2021 - {{ "now"|date("Y") }}. Tous droits réservés, reproduction interdite
                 </p>
                 <p><a class="sitemap" href="{{ path('front_sitemap') }}">Plan du site</a></p>
             </footer>
