- modif style css

--- a/templates/back/base.html.twig
+++ b/templates/back/base.html.twig
@@ -29,8 +29,8 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <div class="dropdown">
-                        <a class="btn btn-secondary dropdown-toggle" href="{{ path('portfolio_browse')}}" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Collections
+                        <a class="btn btn-secondary dropdown-toggle text-right" href="{{ path('portfolio_browse')}}" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projets
                         </a>
 
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">                                                
