--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
+
         <title>{% block title %}Romain Godard{% endblock %}</title>
         
         {# Bootstrap 4.6 CSS #}
@@ -34,7 +35,7 @@
                         <div class="navbar-nav">
                         <div class="dropdown">
                             <a class="btn btn-secondary dropdown-toggle" href="{{ path('portfolio_browse')}}" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Collections
+                                Projets
                             </a>
     
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">                                                
@@ -47,7 +48,7 @@
                         <a class="nav-link {% if route_name == "front_biography_read" %} active {% endif %}" href="{{ path('front_biography_read') }}">Biographie</a>
                         <a class="nav-link {% if route_name == "front_contact" %} active {% endif %}" href="{{ path('front_contact') }}">Contact</a>
     
-                        <a class="insta-logo" href="https://www.instagram.com/romain_114/"><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
+                        <a class="insta-logo" href="https://www.instagram.com/romain_114/" alt="Instagram"><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
                         
                         
                     </div>
