--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,16 @@
 @import url(//fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,200;0,400;0,500;0,700;1,200;1,400;1,500;1,700&display=swap);
 
+.index-banner {
+  text-align: center;
+  font-weight: 400;
+  margin: 3em 0;
+}
+
+.projets {
+  margin-bottom: 0.5em;
+  text-align: center;
+}
+
 .picture-small {
   max-width: 70%,
 }
@@ -43,15 +54,20 @@ body {
   font-weight: 500;
 }
 
-.photo {
-  margin-bottom: 2em;
+figcaption {
+  margin-bottom: 3em;
+  font-size: 0.8em;
+}
+
+.collection-name {
+  margin: 1em;
+  text-align: center;
+  font-size: 2rem;
 }
 
 .bio-text {
   white-space: pre-wrap; 
 }
-
-
 
 .portfolio-picture {
   position: relative;
@@ -96,8 +112,12 @@ footer {
   
 }
 
+.copyright {
+  font-size: 0.8em;
+}
 .sitemap {
   margin-left: 1em;
+  font-size: 0.8em;
 }
 
 .bottom-button {
@@ -122,6 +142,28 @@ footer {
 
   .cards {
     max-width: 80%;
+  }
+
+  .index-banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 400;
+    margin: 3.5em 0;
+  }
+  .index-banner > h1 {
+    font-size: 3.5em;
+  }
+  .index-banner > p {
+    font-size: 1.5em;
+  }
+  .projets {
+    margin-bottom: 1em;
+  }
+
+  figcaption {
+    margin-bottom: 5em;
+    font-size: 1em;
   }
 }
 
