--- a/templates/front/main/index.html.twig
+++ b/templates/front/main/index.html.twig
@@ -5,13 +5,14 @@
 {% block body %}
 
 
-<h1>Romain Godard </h1>
+<div class="index-banner">
+  <h1>Romain Godard</h1>
+  
+  <p>Photographe</p>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, error nesciunt, qui veniam odio inventore itaque deserunt possimus consequuntur sunt labore at in vitae? Veniam expedita velit itaque quae laborum repellendus perferendis earum molestias quidem iste? Nulla illo voluptas dolorem optio ipsum quisquam culpa enim asperiores cupiditate assumenda ratione molestias quo quis nesciunt, facere eveniet reiciendis! Fuga consequuntur repudiandae molestiae odit illum dolorum at fugiat architecto, harum molestias atque itaque enim magnam cupiditate sit veniam eos ad. Reiciendis similique praesentium obcaecati eveniet quis tempora voluptatum molestias autem et fuga maxime commodi libero, consequatur, minus incidunt, aliquid necessitatibus?</p>
-<p>Asperiores est obcaecati a accusantium, architecto quae accusamus ut porro, nemo ea iure dicta tenetur. Accusamus cumque unde illo ducimus, possimus blanditiis quam suscipit nemo id, nostrum delectus eius repudiandae placeat voluptas veritatis incidunt nam inventore accusantium distinctio vel ad. Fuga nesciunt repellendus inventore voluptate quis explicabo possimus, quam, necessitatibus veritatis deserunt non officia, dignissimos molestiae rerum ipsa eius aliquam repellat. Quidem repellendus possimus beatae vitae incidunt? Similique earum, perspiciatis sit, rem sunt accusantium illo aperiam tempore modi ratione deserunt ipsum magnam id eius, sint corrupti repellat qui quos. Magni eos nihil delectus impedit adipisci! Debitis veniam consequuntur, ea rem cum quibusdam similique est sit nostrum iusto reiciendis repudiandae saepe dolorum et quis earum exercitationem non fugiat commodi repellendus magnam adipisci dolore! Laudantium qui, facilis quis enim porro nostrum dolorem aspernatur dicta similique obcaecati alias unde, odit animi modi. </p>
+</div>
 
-
-<h2>Les collections</h2>
+<h2 class="projets">Projets</h2>
 
 {% for portfolio in portfolios %}
   <a href="{{ path('front_portfolio_read', {'id': portfolio.id}) }}" >
@@ -21,12 +22,14 @@
         <h2>
           {{ portfolio.name }}
         </h2>
-        <h4>
+        <p>
           {{ portfolio.description }}
-        </h4>
+        </p>
       </div>
     </div>
   </a>
+
+
 
 {% endfor %}
 
